tests/baselines/reference/superSymbolIndexedAccess6.errors.txt
tests/cases/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess6.ts(11,22): error TS2538: Type 'any' cannot be used as an index type.


==== tests/cases/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess6.ts (1 errors) ====
    var symbol: any;
    
    class Foo {
        static [symbol]() {
            return 0;
        }
    }
    
    class Bar extends Foo {
        static [symbol]() {
            return super[symbol]();
                         ~~~~~~
!!! error TS2538: Type 'any' cannot be used as an index type.
        }
    }